--- a/Structur_Objective/Structur_Objective.vcxproj.filters
+++ b/Structur_Objective/Structur_Objective.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Structur_Objective.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Tester.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Tester.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
